# CORAL

./: .gitignore  CLAUDE.md  README.md  README_CN.md  README_JP.md  pyproject.toml
blog/: index.html
coral/: config.py
coral/agent/: manager.py  warmstart.py
coral/cli/: __init__.py  query.py  start.py
coral/hub/prompts/: warmstart_research.md
coral/template/: coral.md.template  coral_single.md.template
coral/web/static/: index.html
coral/web/static/assets/: index-Bo3p00RG.js  index-BsRp5zrL.css
coral/workspace/: worktree.py
docs/plans/: 2026-04-09-rag-jaquad-design.md
docs/result/: log.md
examples/: README.md
examples/circle_packing/: task.yaml
examples/dna_design/: task.yaml
examples/drug_design/: task.yaml
examples/drug_design/eval/data/: broad_hts_coadd_hits.txt  combined_antibiotics.txt
examples/drug_design/seed/data/: starter_molecules.smi
examples/kernel_builder/: task.yaml
examples/kernel_engineering/trimul/: task.yaml
examples/mnist/: task.yaml
examples/rag_jaquad/: .gitignore  README.md  __init__.py  task.yaml
examples/rag_jaquad/eval/: grader.py
examples/rag_jaquad/eval/fixtures/: validation_corpus.jsonl  validation_queries.jsonl
examples/rag_jaquad/scripts/: prepare_jaquad.py
examples/rag_jaquad/seed/: solution.py
examples/spaceship_titanic/: task.yaml
examples/stanford_covid_vaccine/: task.yaml
tests/: test_config.py  test_warmstart.py
tests/examples/: test_prepare_jaquad.py  test_rag_jaquad_grader.py  test_rag_jaquad_solution.py
web/src/components/: ScoreChart.tsx
